--- a/my_bc_py/CMakeLists.txt
+++ b/my_bc_py/CMakeLists.txt
@@ -3,4 +3,4 @@ project(my_bc_py C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(my_bc_py main.c my_token.h my_lexer.h my_lexer.c my_token.c nodes.h nodes.c parser.h parser.c)
+add_executable(my_bc_py main.c my_token.h my_lexer.h my_lexer.c my_token.c nodes.h nodes.c parser.h parser.c my_readline.h my_readline.c utils.h utils.c)
